IMCMS-350 - Image Editor improvements: - Fixed z-index for site-specific panel.

--- a/src/main/webapp/css/admin/imcms-admin_panel.css
+++ b/src/main/webapp/css/admin/imcms-admin_panel.css
@@ -172,7 +172,7 @@
 #imcmsAdminSpecial {
     width: 100%;
     position: relative;
-    z-index: 1501;
+    z-index: 1499;
     overflow: hidden;
     border-bottom: 1px solid #ccc;
     background-color: #fff;
